# RAG-Knowledge-Assistant

./: .gitignore  README.md  REQUIREMENTS.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
arxiv_rag_praktikum_senior/: README.md  docker-compose.yml  requirements.txt
arxiv_rag_praktikum_senior/app/: cli.py  config.py  crawler.py  embedding.py  ingest.py  rate_limit.py  scoring.py  text_extract.py
arxiv_rag_praktikum_senior/app/api/: main.py  schemas.py
arxiv_rag_praktikum_senior/tests/: test_chunking.py  test_dedupe.py  test_rate_limit.py  test_scoring.py
services/augmentation/: main.py  pyproject.toml  readme.md
services/backend/: chat_conversations.py  chat_models.py  chunks.py  db.py  main.py  models.py  pyproject.toml  routes.py
services/frontend/: app.py  main.py
services/frontend/components/: render.py  sidebar.py  styles.py
services/frontend/models/: chat_settings.py
services/frontend/services/: backend_client.py  frontend_actions.py
services/frontend/ui/: css_styling.py  render_functions.py  sidebar.py
services/frontend/views/: chat.py  documentation.py  documents.py  history.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/app/: main.py
services/retrieval/: Dockerfile  ingest_routes.py  main.py
services/retrieval/app/: chunking.py  db.py  dedupe.py  models.py  retrieval.py
shared/: pyproject.toml  schemas.py
