# Location: apps/augmentation/pyproject.toml
[project]
name = "augmentation"
version = "0.1.0"
dependencies = [
    "shared",
    "openai",
    "langchain",
    "requests",
]
[tool.uv.sources]
shared = { workspace = true } # Keep it clean and cloud-ready

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"